Fix again overflow.

--- a/style/modules/_module-exercise.scss
+++ b/style/modules/_module-exercise.scss
@@ -33,7 +33,7 @@
     border-radius: 4px 0 0 4px;
     display: grid;
     // FIXME: BAAAAAAH 
-    grid-template-rows: 85.7vh;
+    grid-template-rows: 84vh;
 
     > .inner {
       overflow: auto;
